--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -7,19 +7,15 @@
 
 name: Build_x86_64
 
-on: 
-  release:
-    types: [published]
-
+on:
   push:
     branches: 
       - master
-
-  #schedule:
-  #  - cron: 0 8 * * 5
-  
-  watch:
-    types: [started]
+  #     ↑↑↑ 改成你的分支名, 一般是master
+  # schedule:
+  #   - cron: 0 20 * * *
+  # release:
+  #   types: [published]
 
 jobs:
   build:
@@ -28,6 +24,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@master
+      with:
+        ref: master          
+      #      ↑↑↑ 改成你的分支名, 一般是master
 
     - name: Initialization environment
       env:
