--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -72,13 +72,12 @@ jobs:
     - name: Configuration Customization - Build_x86_64
       env:
         CONFIG_FILE: 'x86_64.config'
-        DIY_SH: 'diy.sh'
       run: |
         [ -e package ] && mv package openwrt/package
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x $DIY_SH
+        chmod +x ./customize.sh && ./customize.sh
+        chmod +x ./diy.sh && ./diy.sh
         cd openwrt
-        ../$DIY_SH
         make defconfig
         
     - name: Download package
