--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -77,8 +77,7 @@ jobs:
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x ./customize.sh && ./customize.sh
         chmod +x ./diy.sh && ./diy.sh
-        cd openwrt
-        make defconfig
+        cd openwrt && make defconfig
         
     - name: Download package
       working-directory: ./openwrt
