--- a/x86_64.config
+++ b/x86_64.config
@@ -10,11 +10,11 @@ CONFIG_GRUB_CONSOLE is not set
 CONFIG_PACKAGE_luci-app-docker=n
 CONFIG_PACKAGE_luci-i18n-docker-zh-cn=n
 CONFIG_PACKAGE_luci-app-koolproxyR=y
-CONFIG_PACKAGE_luci-app-serverchan=y
-CONFIG_PACKAGE_luci-app-unblockneteasemusic-mini=y
-CONFIG_PACKAGE_luci-app-OpenAppFilter=y
-CONFIG_PACKAGE_luci-app-smartinfo=y
-CONFIG_PACKAGE_luci-app-Rclone-OpenWrt=y
+#CONFIG_PACKAGE_luci-app-serverchan=y
+#CONFIG_PACKAGE_luci-app-unblockneteasemusic-mini=y
+#CONFIG_PACKAGE_luci-app-OpenAppFilter=y
+#CONFIG_PACKAGE_luci-app-smartinfo=y
+#CONFIG_PACKAGE_luci-app-Rclone-OpenWrt=y
 CONFIG_PACKAGE_luci-app-qbittorrent is not set
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
